задал размеры для iframe

--- a/28003.html
+++ b/28003.html
@@ -11,7 +11,8 @@
     </head>
 <body>
 
-<iframe src="https://my.local.ecwid.com:8443/cp/partner-login?ownerid=28003&login_sha1token=f3fb6e373b122fa02508f7184aaae543a3002077&t=1608546694">
+<iframe width="972" height="600" src="https://my.local.ecwid.com:8443/cp/partner-login?ownerid=28003&login_sha1token=660f1801152edc2258993bfa7e2bda614b50f588&t=1610609131">
 </iframe>
 </body>
 </html>
+
