--- a/45002.html
+++ b/45002.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<iframe src="https://my.local.ecwid.com:8443/cp/partner-login?ownerid=45002&login_sha1token=86966832606df97a2204508aa8a941b52b1653b8ca&t=1608546694">
+
+<iframe width="972" height="600" src="https://my.local.ecwid.com:8443/cp/partner-login?ownerid=45002&login_sha1token=8d80044c8126f160818551bbbe84d68d3fa0ae3f&t=1610609131">
 </iframe>
 </body>
 </html>
+
