домен multiscreenstore.com

--- a/28003.html
+++ b/28003.html
@@ -11,7 +11,7 @@
     </head>
 <body>
 
-<iframe width="972" height="600" src="https://my.local.ecwid.com:8443/cp/partner-login?ownerid=28003&login_sha1token=d7f43e7b1ef07216995060c5147223c9f0ca1a19&t=1611053269">
+<iframe width="972" height="600" src="https://my.multiscreenstore.com:8443/cp/partner-login?ownerid=28003&login_sha1token=d7f43e7b1ef07216995060c5147223c9f0ca1a19&t=1611053269">
 </iframe>
 </body>
 </html>
