--- a/45002.html
+++ b/45002.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<iframe width="972" height="600" src="https://my.local.ecwid.com:8443/cp/partner-login?ownerid=45002&login_sha1token=37dfef31e8e6bfa9d8a48b298bbfe1230d8432d0&t=1611053269">
+<iframe width="972" height="600" src="https://my.multiscreenstore.com:8443/cp/partner-login?ownerid=45002&login_sha1token=37dfef31e8e6bfa9d8a48b298bbfe1230d8432d0&t=1611053269">
 </iframe>
 </body>
 </html>
