--- a/e83105.html
+++ b/e83105.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<iframe width="972" height="600" src="https://app.local.ecwid.com:8443/api/v3/84002/sso?token=secret_e6q1AybX5AkQPpCw2wEBvk9Xjgv5NSeG&timestamp=1621255373&signature=f0b3a976a6427356f1c2dd1e726a9ffbe385eacb63b499564c52dd7ce077b813">
+<iframe sandbox="" width="972" height="600" src="https://app.local.ecwid.com:8443/api/v3/84002/sso?token=secret_e6q1AybX5AkQPpCw2wEBvk9Xjgv5NSeG&timestamp=1621255373&signature=f0b3a976a6427356f1c2dd1e726a9ffbe385eacb63b499564c52dd7ce077b813">
 </iframe>
 </body>
 </html>
