--- a/fobsexample.html
+++ b/fobsexample.html
@@ -38,7 +38,7 @@
 <body>
     <h1 class="header">Fancy Header</h1>
     <div class="text">Some text.</div>
-    <script src="fontfaceobserver.js" type="text/javascript" async></script>
+    <script src="fontfaceobserver.js" type="text/javascript"></script>
     <script type="text/javascript">
       const pacificoObserver = new FontFaceObserver('Pacifico');
       const robotoObserver = new FontFaceObserver('Roboto');
