--- a/e82502nis.html
+++ b/e82502nis.html
@@ -15,6 +15,9 @@
 <meta name="theme-color" content="#FFFFFF" />
 <meta http-equiv="x-dns-prefetch-control" content="on">
 
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-32604-g450b0bf35b3/website/fonts/poppins-latin-700-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-32604-g450b0bf35b3/website/fonts/poppins-latin-400-normal.woff2" rel="preload" as="font" crossorigin/>
+
 <link rel="preconnect" href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-32604-g450b0bf35b3/website" crossorigin/>
 <link rel="dns-prefetch" href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-32604-g450b0bf35b3/website" crossorigin/>
 
