--- a/psprodt.html
+++ b/psprodt.html
@@ -15,15 +15,15 @@
 <meta name="theme-color" content="#FFFFFF" />
 <meta http-equiv="x-dns-prefetch-control" content="on">
 
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-latin-700-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-latin-400-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-cyrillic-700-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-cyrillic-400-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-latin-700-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-latin-400-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-latin-ext-700-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-cyrillic-400-normal.woff2" rel="preload" crossorigin/>
-<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-cyrillic-700-normal.woff2" rel="preload" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-latin-700-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-latin-400-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-cyrillic-700-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-cyrillic-400-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-latin-700-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-latin-400-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-latin-ext-700-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/montserrat-cyrillic-400-normal.woff2" rel="preload" as="font" crossorigin/>
+<link href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website/fonts/inter-cyrillic-700-normal.woff2" rel="preload" as="font" crossorigin/>
 
 <link rel="preconnect" href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website" crossorigin/>
 <link rel="dns-prefetch" href="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2021/2021-33643-ge157bad799e/website" crossorigin/>
