no style with cover

--- a/e82502nis.html
+++ b/e82502nis.html
@@ -182,41 +182,41 @@
 --tagline-text-color-s: 0%;
   } #tile-cover-u4Tt7H .ins-tile__image {
       background-color: rgba(90, 160, 187, 255);
-      background-image: url(/images/T2Sn9LC-1000x2000.webp);
+      background-image: url(/images/noT2Sn9LC-1000x2000.webp);
     }
     @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-      background-image: url(/images/T2Sn9LC-1000x2000.webp);
+      background-image: url(/images/noT2Sn9LC-1000x2000.webp);
     }@media (min-width: 500px) {
     #tile-cover-u4Tt7H .ins-tile__image {
-      background-image: url(/images/T2Sn9LC-1200x1200.webp), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(/images/noT2Sn9LC-1200x1200.webp), url(/images/noT2Sn9LC-200x200.webp);
     }
     @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 500px),
      (min-resolution: 192dpi) and (min-width: 500px) {
-      background-image: url(/images/T2Sn9LC-2000x2000.webp), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(/images/noT2Sn9LC-2000x2000.webp), url(/images/noT2Sn9LC-200x200.webp);
     }
   }@media (min-width: 900px) {
     #tile-cover-u4Tt7H .ins-tile__image {
-      background-image: url(/images/T2Sn9LC-2000x2000.webp), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(/images/noT2Sn9LC-2000x2000.webp), url(/images/noT2Sn9LC-200x200.webp);
     }
     @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 900px),
      (min-resolution: 192dpi) and (min-width: 900px) {
-      background-image: url(/images/T2Sn9LC-2000x2000.webp), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(/images/noT2Sn9LC-2000x2000.webp), url(/images/noT2Sn9LC-200x200.webp);
     }
   }@media (min-width: 1200px) {
     #tile-cover-u4Tt7H .ins-tile__image {
-      background-image: url(/images/T2Sn9LC-2000x2000.webp), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(/images/noT2Sn9LC-2000x2000.webp), url(/images/noT2Sn9LC-200x200.webp);
     }
     @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px),
      (min-resolution: 192dpi) and (min-width: 1200px) {
-      background-image: url(undefined), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(undefined), url(/images/noT2Sn9LC-200x200.webp);
     }
   }@media (max-width: 499px) {
     #tile-cover-u4Tt7H .ins-tile__background--fixed .ins-tile__image {
-      background-image: url(/images/T2Sn9LC-1200x1200.webp), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(/images/noT2Sn9LC-1200x1200.webp), url(/images/noT2Sn9LC-200x200.webp);
     }
     @media (-webkit-min-device-pixel-ratio: 2) and (max-width: 499px),
      (min-resolution: 192dpi) and (max-width: 499px) {
-      background-image: url(/images/T2Sn9LC-1200x1200.webp), url(/images/T2Sn9LC-200x200.webp);
+      background-image: url(/images/noT2Sn9LC-1200x1200.webp), url(/images/noT2Sn9LC-200x200.webp);
     }
   } </style><div class="ins-tile__background ins-tile__background--parallax"><div class="ins-tile__image"></div></div><div class="ins-tile__wrap ins-tile__animated"><!----><!----><h1 class="ins-tile__headline"> Ride the wave </h1><div class="ins-tile__footer"><div class="ins-tile__description ins-tile__format">Surfing gear and accessories</div><div class="ins-tile__buttons"><div class="ins-tile__button ins-tile__button--primary ins-button-wrap"><a target="_self" tabindex="0" class="ins-control ins-control--button ins-control--solid ins-control--medium ins-control--round"><div class="ins-control__button"><div class="ins-control__wrap"><div class="ins-control__text"> Shop now </div></div></div></a><!----></div><!----></div></div><div class="ins-tile__spacer"></div><!----></div></main><div id="tile-products-LBe6wK" tile-id="products-LBe6wK" class="ins-tile ins-tile--products ins-tile--transparent"><div><!----><!----><!----><!----></div><style> #tile-products-LBe6wK {
     --background-gradient-color-from-a: 0;
